# devbot_SA

./: .env  .gitignore  Details.md  Devbot Api Usage.docx  LICENSE  README.md  api_key  devbot.py  devbot_assistant.py  environment.yml  gui.py  output  pdfGenerator.py  plantuml_to_graph.py  prompts.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
devbot_sa/: devbot.py  devbot_assistant.py  diagram_1.puml  gui.py  pdfGenerator.py  prompts.py
evaluation/: diff.py  main.py  requirements.txt
genai4sa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
