[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devbot_sa"
version = "0.1.0"
description = "A developer assistant bot"
authors = [{ name="Hashim Khan", email="hashimahmedkhan2002@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain==0.3.25",
    "nbconvert",
    "python-dotenv==1.0.0",
    "langchain-google-genai",
    "langchain-groq==0.3.2",
    "langchain-openai==0.3.16",
    "uvicorn==0.25.0",
    "customtkinter==5.2.2",
    "plantuml",
    "reportlab==4.4.0",
    "networkx",
    "numpy",
    "scipy"
]

[project.scripts]
devbot_sa = "devbot_sa.gui:main"