[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai4sa"
version = "0.2.1"
description = "A software architecture generation tool using LLMs"
authors = [{ name="Hashim Khan", email="hashimahmedkhan2002@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-groq",
    "nbconvert",
    "python-dotenv==1.0.0",
    "uvicorn==0.25.0",
    "customtkinter==5.2.2",
    "plantuml",
    "reportlab==4.4.0",
    "networkx",
    "numpy",
    "scipy"
]

[project.scripts]
genai4sa = "devbot_sa.gui:main"
